--- a/src/style/index.css
+++ b/src/style/index.css
@@ -31,6 +31,9 @@ body {
   background-color: #000;
   border: 1px solid #b7d4a8;
 }
+#stage #snake div:first-child {
+  background-color: red;
+}
 #stage #food {
   width: 10px;
   height: 10px;
