--- a/src/style/index.less
+++ b/src/style/index.less
@@ -34,6 +34,10 @@ body {
         }
     }
     //TODO:头和身子颜色不同
+    #snake div:first-child {
+        // border: 1px solid red;
+        background-color: red;
+    }
     
     #food {
         width: 10px;
